objects/ASI_TH_CRM_RSP__c.object
<CustomObject>
    <description>ASI_TH_CRM_RSP</description>
    <fields>
        <fullName>ASI_CRM_Branch__c</fullName>
        <label>Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
            <filterItems>
                <field>ASI_CRM_AccountsAdditionalField__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Outlet (CN)</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN RSP</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>VN RSP</value>
            </filterItems>
            <filterItems>
                <field>ASI_CRM_AccountsAdditionalField__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Outlet (VN)</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>RSPs</relationshipLabel>
        <relationshipName>RSP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Input_Date_Time__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Input Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Item_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Group</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_MFM_Item_Group__c.ASI_CRM_CN_Consumer_Website__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_Item_Group__c</referenceTo>
        <relationshipLabel>RSP</relationshipLabel>
        <relationshipName>RSP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Quantity__c</fullName>
        <label>Facing Qty(B)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_RSP__c</fullName>
        <label>RSP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_DateTime__c</fullName>
        <label>Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Inventory__c</fullName>
        <label>Inventory(B)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_Facing__c</fullName>
        <label>Facing</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Order_Qty__c</fullName>
        <label>Order Qty(B)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PGLeader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PG Leader</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_CRM_RSP_PGLeader_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Price_to_Consumer__c</fullName>
        <label>Price to Consumer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Promoter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promoter</label>
        <referenceTo>ASI_CRM_Promoter__c</referenceTo>
        <relationshipLabel>RSPs</relationshipLabel>
        <relationshipName>ASI_CRM_RSP_Promoter_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Promotion_Price__c</fullName>
        <label>Promotion Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_RSPHeader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RSP Header</label>
        <referenceTo>ASI_CRM_RSPHeader__c</referenceTo>
        <relationshipLabel>RSP</relationshipLabel>
        <relationshipName>RSP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SKU</label>
        <referenceTo>ASI_MFM_SKU_Code__c</referenceTo>
        <relationshipLabel>RSP</relationshipLabel>
        <relationshipName>RSP2SKU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sales_Amount__c</fullName>
        <label>Sales Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_StagingDateTime__c</fullName>
        <label>Staging DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SubmitDateTime__c</fullName>
        <label>Submit DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Bottle_Size__c</fullName>
        <label>Bottle Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_MT_RSP__c</fullName>
        <label>MT RSP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Month__c</fullName>
        <formula>CASE(MONTH( ASI_TH_CRM_Date__c ),
1, &quot;Jan&quot;,
2, &quot;Feb&quot;,
3, &quot;Mar&quot;, 
4, &quot;Apr&quot;, 
5, &quot;May&quot;, 
6, &quot;Jun&quot;,
7, &quot;Jul&quot;,
8, &quot;Aug&quot;,
9, &quot;Sep&quot;,
10, &quot;Oct&quot;,
11, &quot;Nov&quot;,
12, &quot;Dec&quot;,
&quot;&quot;)</formula>
        <label>Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Price_to_WS__c</fullName>
        <label>Price to WS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Std_Bottle_Size__c</fullName>
        <formula>ASI_TH_CRM_Sub_Brand__r.ASI_HK_CRM_Bottle_Size__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Std Bottle Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Sub_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipName>RSP_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_WS_RSP__c</fullName>
        <label>WS RSP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_WS_to_RT__c</fullName>
        <label>WS to RT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Year__c</fullName>
        <formula>TEXT(YEAR( ASI_TH_CRM_Date__c ))</formula>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <label>RSP</label>
    <listViews>
        <fullName>ASI_CRM_CN_ALL</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_CN_Customer__c</columns>
        <columns>ASI_CRM_Price__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>ASI_CRM_CN_Quantity__c</columns>
        <columns>ASI_CRM_CN_Item_Group__c</columns>
        <columns>ASI_CRM_CN_Input_Date_Time__c</columns>
        <columns>ASI_TH_CRM_Date__c</columns>
        <columns>ASI_CRM_DateTime__c</columns>
        <columns>ASI_TH_CRM_Month__c</columns>
        <columns>ASI_CRM_Region__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TH_CRM_RSP__c.ASI_CRM_CN_RSP</value>
        </filters>
        <label>All CN</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_TH_CRM_RSP</fullName>
        <columns>NAME</columns>
        <columns>ASI_TH_CRM_Sub_Brand__c</columns>
        <columns>ASI_TH_CRM_Year__c</columns>
        <columns>ASI_TH_CRM_Month__c</columns>
        <columns>ASI_TH_CRM_MT_RSP__c</columns>
        <columns>ASI_TH_CRM_Price_to_WS__c</columns>
        <columns>ASI_TH_CRM_WS_RSP__c</columns>
        <columns>ASI_TH_CRM_WS_to_RT__c</columns>
        <columns>ASI_TH_CRM_Std_Bottle_Size__c</columns>
        <columns>ASI_TH_CRM_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TH_CRM_RSP__c.ASI_TH_CRM_RSP</value>
        </filters>
        <label>ASI TH CRM RSP</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TH_CRM_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_TH_CRM_RSP1</fullName>
        <columns>NAME</columns>
        <columns>ASI_TH_CRM_Sub_Brand__c</columns>
        <columns>ASI_TH_CRM_Year__c</columns>
        <columns>ASI_TH_CRM_Month__c</columns>
        <columns>ASI_TH_CRM_MT_RSP__c</columns>
        <columns>ASI_TH_CRM_Price_to_WS__c</columns>
        <columns>ASI_TH_CRM_WS_RSP__c</columns>
        <columns>ASI_TH_CRM_WS_to_RT__c</columns>
        <columns>ASI_TH_CRM_Std_Bottle_Size__c</columns>
        <columns>ASI_TH_CRM_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TH_CRM_RSP__c.ASI_TH_CRM_RSP</value>
        </filters>
        <filters>
            <field>ASI_TH_CRM_Year__c</field>
            <operation>equals</operation>
            <value>2015</value>
        </filters>
        <filters>
            <field>ASI_TH_CRM_Month__c</field>
            <operation>equals</operation>
            <value>MAR</value>
        </filters>
        <label>ASI TH CRM RSP MAR 15</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TH_CRM_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_TH_CRM_RSP2</fullName>
        <columns>NAME</columns>
        <columns>ASI_TH_CRM_Sub_Brand__c</columns>
        <columns>ASI_TH_CRM_Year__c</columns>
        <columns>ASI_TH_CRM_Month__c</columns>
        <columns>ASI_TH_CRM_MT_RSP__c</columns>
        <columns>ASI_TH_CRM_Price_to_WS__c</columns>
        <columns>ASI_TH_CRM_WS_RSP__c</columns>
        <columns>ASI_TH_CRM_WS_to_RT__c</columns>
        <columns>ASI_TH_CRM_Std_Bottle_Size__c</columns>
        <columns>ASI_TH_CRM_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TH_CRM_RSP__c.ASI_TH_CRM_RSP</value>
        </filters>
        <filters>
            <field>ASI_TH_CRM_Month__c</field>
            <operation>equals</operation>
            <value>Nov</value>
        </filters>
        <filters>
            <field>ASI_TH_CRM_Year__c</field>
            <operation>equals</operation>
            <value>2015</value>
        </filters>
        <label>ASI TH CRM RSP</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TH_CRM_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_TH_CRM_RSP_2017</fullName>
        <columns>NAME</columns>
        <columns>ASI_TH_CRM_Sub_Brand__c</columns>
        <columns>ASI_TH_CRM_Year__c</columns>
        <columns>ASI_TH_CRM_Month__c</columns>
        <columns>ASI_TH_CRM_MT_RSP__c</columns>
        <columns>ASI_TH_CRM_Price_to_WS__c</columns>
        <columns>ASI_TH_CRM_WS_RSP__c</columns>
        <columns>ASI_TH_CRM_WS_to_RT__c</columns>
        <columns>ASI_TH_CRM_Std_Bottle_Size__c</columns>
        <columns>ASI_TH_CRM_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TH_CRM_RSP__c.ASI_TH_CRM_RSP</value>
        </filters>
        <filters>
            <field>ASI_TH_CRM_Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <label>ASI TH CRM RSP 2017</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TH_CRM_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_MY_RSP</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_SKU__c</columns>
        <columns>ASI_TH_CRM_Sub_Brand__c</columns>
        <columns>ASI_CRM_Price__c</columns>
        <columns>ASI_CRM_RSPHeader__c</columns>
        <columns>ASI_CRM_Price_to_Consumer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TH_CRM_RSP__c.ASI_CRM_MY_RSP</value>
        </filters>
        <label>All MY RSP</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_VN_all_User</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_VN_RSPs</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_CN_Customer__c</columns>
        <columns>ASI_TH_CRM_Sub_Brand__c</columns>
        <columns>ASI_CRM_Price__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TH_CRM_RSP__c.ASI_CRM_VN_RSP</value>
        </filters>
        <label>All VN RSPs</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_VN_all_User</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_MY_RSP_Last_Month</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_SKU__c</columns>
        <columns>ASI_TH_CRM_Sub_Brand__c</columns>
        <columns>ASI_CRM_Price__c</columns>
        <columns>ASI_CRM_RSPHeader__c</columns>
        <columns>ASI_CRM_Price_to_Consumer__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TH_CRM_RSP__c.ASI_CRM_MY_RSP</value>
        </filters>
        <filters>
            <field>ASI_TH_CRM_Date__c</field>
            <operation>equals</operation>
            <value>LAST_MONTH</value>
        </filters>
        <label>My MY RSP Last Month</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_MY_StandardUser</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_MY_RSP_This_Month</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_SKU__c</columns>
        <columns>ASI_TH_CRM_Sub_Brand__c</columns>
        <columns>ASI_CRM_Price__c</columns>
        <columns>ASI_CRM_RSPHeader__c</columns>
        <columns>ASI_CRM_Price_to_Consumer__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TH_CRM_RSP__c.ASI_CRM_MY_RSP</value>
        </filters>
        <filters>
            <field>ASI_TH_CRM_Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>My MY RSP This Month</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_MY_StandardUser</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>RSP-{0000}-TH</displayFormat>
        <label>RSP No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RSP</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_RSP</fullName>
        <active>true</active>
        <label>CN RSP</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_MY_RSP</fullName>
        <active>true</active>
        <label>ASI CRM MY RSP</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_VN_RSP</fullName>
        <active>true</active>
        <label>VN RSP</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TH_CRM_RSP</fullName>
        <active>true</active>
        <label>ASI TH CRM RSP</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ASI_CRM_MY_RSPLine_BlankChk</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$User.BypassVR__c != TRUE,
CONTAINS($RecordType.DeveloperName, &apos;ASI_CRM_MY&apos;), 
OR(
ISBLANK(ASI_CRM_Price_to_Consumer__c)
)
)</errorConditionFormula>
        <errorMessage>The following fields must be filled:
 - SKU, Price to Consumer</errorMessage>
    </validationRules>
</CustomObject>